# aivu-greybox

./: .gitignore  AIVU_MRAC_Architecture_v0_1.md  README.md  check_env.sh  run_tests.sh
code/aivu_greybox/: README.md  pyproject.toml
code/aivu_greybox/src/aivu_greybox/: __init__.py  active_fit.py  defaults.py  epw_loader.py  fan_heat.py  forward_chain.py  passive_fit.py  passive_fit_types.py  psychrometrics.py  real_chain.py  records.py  staged_fit.py
code/aivu_greybox/src/aivu_greybox/_signing_stub/: __init__.py  integrity_api.py
code/aivu_greybox/tests/: test_active_fit.py  test_fan_heat.py  test_g8_active_staged_closed_loop.py  test_g8_active_staged_with_measured_hvac.py  test_g8_closed_loop.py  test_g8_staged_closed_loop.py  test_passive_fit.py  test_psychrometrics.py  test_real_chain.py  test_staged_fit.py
code/aivu_greybox/tests/fixtures/: Phoenix_AMY_2024.epw
code/aivu_hvac_greybox/: README.md  pyproject.toml
code/aivu_hvac_greybox/src/aivu_hvac_greybox/: __init__.py  bi_quadratic_fit.py  records.py
code/aivu_hvac_greybox/tests/: test_pass_a_closed_loop.py
continuity/: 2026_05_11__session_log.md  2026_05_12__session_log.md  2026_05_13__session_log.md  2026_05_21__session_log.md  AIVU_Critical_Path_Dependency_Map_v0_2.md  AIVU_Critical_Path_Dependency_Map_v0_3.md  AIVU_Critical_Path_Dependency_Map_v0_4.md  AIVU_Critical_Path_Dependency_Map_v0_7.md  AIVU_Critical_Path_Dependency_Map_v0_8.md  AIVU_Critical_Path_Dependency_Map_v0_9.md  AIVU_Due_Diligence_QA.md  AIVU_MRAC_Architecture_Addendum_2026_05_16.md  AIVU_Operational_Reference.md  AIVU_Phoenix_Pilot_Roadmap.md  AIVU_Unfinished_Work_2026_05_11.md  AIVU_Unfinished_Work_2026_05_13_delta.md  AIVU_Working_Preferences.md  AIVU_Working_Preferences_Addendum_2026_05_13.md  AIVU_Working_Preferences_Addendum_2026_05_13_Operational.md  AIVU_Working_Preferences_Operational.md  DAY_NUMBERING_RECONCILIATION_WORKSTREAM.md  (+2 more)
(+14 files in other folders)
