[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivu_greybox"
version = "0.1.0"
description = "Inverse identification of envelope and equipment parameters from commissioning telemetry"
authors = [
    {name = "Jan-Dieter Spalink"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pytest.ini_options.markers]
slow = "marks tests as slow"
