[project]
name = "aivu_hvac_greybox"
version = "0.1.0"
description = "HVAC inverse identification — pilot subset of H1 v0.2 (D17_pilot + D20_pilot joint Laplace fit)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "AIVU" },
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "aivu_physics_phase2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aivu_hvac_greybox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that take more than a second",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501", "N803", "N806", "N802", "N815"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N"]
